--- a/QuestStore3/QuestStore3.csproj
+++ b/QuestStore3/QuestStore3.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\Components\bonus\bonus.ts" />
+    <None Remove="ClientApp\src\app\Components\group\group.ts" />
     <None Remove="ClientApp\src\app\Components\home\registration.ts" />
     <None Remove="ClientApp\src\app\Components\quest\quest.ts" />
     <None Remove="ClientApp\src\app\Components\user\get-user\userFull.ts" />
@@ -43,10 +44,15 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\Components\bonus\bonus.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\Components\group\group.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Components\home\registration.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Components\quest\quest.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Components\user\usersFull.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Components\user\user.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\src\app\Components\mentor\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
