--- a/QuestStore3/ClientApp/package.json
+++ b/QuestStore3/ClientApp/package.json
@@ -12,16 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
+    "@angular/animations": "10.0.11",
+    "@angular/common": "10.0.11",
+    "@angular/compiler": "10.0.11",
+    "@angular/core": "10.0.11",
+    "@angular/forms": "10.0.11",
+    "@angular/localize": "^10.0.11",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
+    "@angular/platform-browser": "10.0.11",
+    "@angular/platform-browser-dynamic": "10.0.11",
+    "@angular/platform-server": "10.0.11",
+    "@angular/router": "10.0.11",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
@@ -30,13 +32,13 @@
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "zone.js": "0.9.1"
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.12",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.11",
+    "@angular/language-service": "^10.0.11",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
@@ -48,7 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.5.3"
+    "typescript": "3.9.7"
   },
   "optionalDependencies": {
     "node-sass": "^4.12.0",
