--- a/QuestStore3/ClientApp/package.json
+++ b/QuestStore3/ClientApp/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "alertifyjs": "^1.13.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
